# deeplabel

./: .gitignore  CMakeLists.txt  README.md
src/: darknetexporter.cpp  labelproject.h  main.cpp  mainwindow.h
